kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hospital
  labels:
    name: hospital
