kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hospital-service
  namespace: hospital
  labels:
    app: hospital
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: hospital
  type: ClusterIP
