kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-ingress
  namespace: hospital
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: hospital.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hospital-service
                port:
                  number: 80
